--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
+    "gh-pages": "^4.0.0",
     "sass": "^1.52.1",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
